src/test/deca/context/valid/ContextAvecObjet/InstanceOf/instanceAObject.deca
// Description:
//    test basique d'instance Object
//
// Resultats:
//    ok
//
class A{}
{
    A a = new A();
    boolean x = a instanceof Object;
}
